k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaryapp-gateway
  namespace: canary
spec:
  hosts:
  - "*"
  gateways:
  - canary-gateway
  http:
  - route:
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: prod
      weight: 100
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: canary
      weight: 0
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: baseline
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaryapp
  namespace: canary
spec:
  hosts:
  - canaryapp
  http:
  - route:
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: prod
      weight: 100
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: canary
      weight: 0
    - destination:
        host: canaryapp
        port:
          number: 8080
        subset: baseline
      weight: 0
